# services/docs/swagger.yaml
@@ -74,6 +74,28 @@ paths:
       summary: Create
       tags:
       - Tasks
+  /tasks/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a specific task by id
+      operationId: get-task-id
+      parameters:
+      - description: Id of the task
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/orm.Tasks'
+      summary: Get Task
+      tags:
+      - Tasks
 schemes:
 - http
 securityDefinitions:
