# services/src/controllers/PrivateTasks.go
@@ -3,13 +3,31 @@ package controllers
 import (
 	"ampl/src/models"
 	"ampl/src/orm"
+	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary		Get Task
+// @Description	Get a specific task by id
+// @Tags        Tasks
+// @Id 			get-task-id
+// @Accept      json
+// @Success		200  {object} orm.Tasks
+// @Produce     json
+// @Param       id path string true "Id of the task"
+// @Router      /tasks/{id} [get]
 func getTaskById(c *gin.Context) {
-
+	id := c.Param("id")
+	fmt.Println(id)
+	var result orm.Tasks
+	err := orm.GetTaskById(id, &result)
+	if err != nil {
+		c.JSON(http.StatusOK, models.ErrResponse{Msg: err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, result)
 }
 
 // @Summary		Create
